--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo_web_frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./build/index.html",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
